# dbastion

./: .gitignore  README.md  pyproject.toml
docker/: docker-compose.yml
docker/clickhouse/: init.sql
docker/postgres/: init.sql  postgresql.conf
scripts/: tpch_load.py
src/dbastion/: __init__.py  auth.py  connections.py  querylog.py
src/dbastion/adapters/: __init__.py  _base.py  _registry.py  bigquery.py  clickhouse.py  cost.py  duckdb.py  postgres.py  snowflake.py
src/dbastion/cli/: __init__.py  _output.py  _shared.py  approve.py  auth.py  connect.py  exec.py  install.py  query.py  schema.py  validate.py
src/dbastion/diagnostics/: __init__.py  codes.py  render.py  types.py
src/dbastion/policy/: __init__.py  _types.py  classify.py  enrich.py  safety.py  tables.py
tests/: conftest.py  test_auth.py  test_querylog.py
tests/adapters/: conftest.py  test_bigquery.py  test_clickhouse.py  test_cost.py  test_duckdb.py  test_postgres.py  test_registry.py  test_snowflake.py
tests/cli/: test_approve.py  test_install.py  test_query_exec.py  test_schema.py  test_validate.py
tests/diagnostics/: test_types.py
tests/policy/: test_classify.py  test_enrich.py  test_pipeline.py  test_safety.py  test_tables.py
