[project]
name = "dbastion"
version = "0.1.1"
description = "Governed database access for AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Bakhtiyar Mautov", email = "bakhtiyar.mautov@gmail.com" },
]
keywords = ["ai-agents", "database", "sql", "cli", "postgres", "bigquery", "snowflake", "clickhouse", "duckdb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]
dependencies = [
    "click>=8.1,<9",
    "sqlglot[c]>=26,<30",
]

[project.urls]
Homepage = "https://github.com/mautbach/dbastion"
Repository = "https://github.com/mautbach/dbastion"
Issues = "https://github.com/mautbach/dbastion/issues"

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
bigquery = ["google-cloud-bigquery>=3.20", "google-auth-oauthlib>=1.0"]
duckdb = ["duckdb>=1.0"]
clickhouse = ["clickhouse-connect>=0.7"]
snowflake = ["snowflake-connector-python>=3.6"]
all = ["dbastion[postgres]", "dbastion[bigquery]", "dbastion[duckdb]", "dbastion[clickhouse]", "dbastion[snowflake]"]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.9", "dbastion[duckdb]", "dbastion[postgres]", "dbastion[clickhouse]"]

[project.scripts]
dbastion = "dbastion.cli:main"
dbast = "dbastion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbastion"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "postgres: requires PostgreSQL connection",
    "clickhouse: requires ClickHouse connection",
    "snowflake: requires Snowflake connection",
]
